<resources>
    <string name="app_name">Match Schedule</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>

    <string name="example_date">Sat, 26 Oct 2018</string>
    <string name="example_team1">Arsenal</string>
    <string name="example_team2">Everton</string>
    <string name="vs">VS</string>
    <string name="example_score1">4</string>
    <string name="example_score2">0</string>

    <string name="example_totalScore1">4</string>
    <string name="example_totalScore2">1</string>
    <string name="homegoaldetail">HomeGoalDetail</string>
    <string name="awaygoaldetail">AwayGoalDetail</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goalkeeper">Goal Keeper</string>
    <string name="home_keeper">Home Keeper</string>
    <string name="away_keeper">Away Keeper</string>
    <string name="goals">Goals</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="home_lineup_defense">Home Lineup Defense</string>
    <string name="away_lineup_defense">Away Lineup Defense</string>
    <string name="home_lineup_midfield">Home Lineup Midfield</string>
    <string name="away_lineup_midfield">Away Lineup Midfield</string>
    <string name="home_lineup_forward">Home Lineup Forward</string>
    <string name="away_lineup_forward">Away Lineup Forward</string>
    <string name="home_lineup_substitutes">Home Lineup Substitutes</string>
    <string name="away_lineup_substitutes">Away Lineup Substitutes</string>
</resources>
